--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,43 @@
 body {
   font-family: 'Roboto', sans-serif;
 }
+
+h1 {
+  font-size: 64px;
+  line-height: 64px;
+}
+
+h2 {
+  font-size: 48px;
+  line-height: 56px;
+}
+
+h3 {
+  font-size: 40px;
+  line-height: 48px;
+}
+
+h4 {
+  font-size: 36px;
+  line-height: 48px;
+}
+
+h5 {
+  font-size: 32px;
+  line-height: 40px;
+}
+
+h6 {
+  font-size: 22px;
+  line-height: 24px;
+}
+
+p {
+  font-size: 17px;
+  line-height: 24px;
+}
+
+small {
+  font-size: 13px;
+  line-height: 16px;
+}
