--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -4,6 +4,18 @@
   padding: 35px 0;
 }
 
+.fa-facebook-square:hover {
+  color: #3b5998;
+}
+
+.fa-twitter-square:hover {
+  color: #55acee;
+}
+
+.fa-instagram:hover {
+  color: #fd1d1d;
+}
+
 .footer-social-media-icon {
   font-size: 24px;
 }
