--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -1,7 +1,16 @@
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../img/logo.png);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 15vh;
+}
+
 .main-nav {
   float: right;
   list-style: none;
-  margin-top: 55px;
+  margin-top: 40px;
 }
 .main-nav li {
   display: inline-block;
@@ -10,7 +19,7 @@
 .main-nav li a:link,
 .main-nav li a:visited {
   padding: 8px 0;
-  color: #3e9a00;
+  color: blanchedalmond;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 90%;
