--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,15 +1,15 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+
+.row {
+  max-width: 1140px;
+  margin: 0 auto;
 }
 
 h1 {
   font-size: 64px;
   line-height: 64px;
-}
-
-h2 {
-  font-size: 48px;
-  line-height: 56px;
 }
 
 h3 {
@@ -40,4 +40,39 @@ p {
 small {
   font-size: 13px;
   line-height: 16px;
+}
+
+h1,
+h2,
+h3 {
+  font-weight: 300;
+  text-transform: uppercase;
+}
+h1 {
+  color: black;
+  margin-top: 0%;
+  margin-bottom: 20px;
+  font-size: 240%;
+  word-spacing: 4px;
+  letter-spacing: 1px;
+}
+h2 {
+  font-size: 180%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+}
+h2::after {
+  display: block;
+  height: 2px;
+  background-color: #5ade00;
+  content: "";
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+h3 {
+  margin-bottom: 15px;
+  font-size: 110%;
 }
