--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -2,20 +2,29 @@ header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../img/logo.png);
   background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  height: 15vh;
+  background-position: 50% 13%;
+  height: 80px;
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
+.navigation ul {
+  margin-bottom: 0;
 }
 
 .main-nav {
   float: right;
   list-style: none;
-  margin-top: 40px;
 }
+
 .main-nav li {
   display: inline-block;
   margin-left: 40px;
 }
+
 .main-nav li a:link,
 .main-nav li a:visited {
   padding: 8px 0;
@@ -26,6 +35,7 @@ header {
   border-bottom: 2px solid transparent;
   transition: border-bottom 0.5s;
 }
+
 .main-nav li a:hover,
 .main-nav li a:active {
   border-bottom: 2px solid #5ade00;
