--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -57,8 +57,7 @@ small {
 }
 
 h1,
-h2,
-h3 {
+h2 {
   font-weight: 300;
   text-transform: uppercase;
 }
@@ -87,6 +86,5 @@ h2::after {
   margin-top: 30px;
 }
 h3 {
-  margin-bottom: 15px;
-  font-size: 110%;
+  padding-top: 110px;
 }
